--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <nav class="navbar">
+  <nav class="navbar bg-gradient-to-r from-blue-500 to-indigo-600 text-white">
     <div class="nav-left">
-      <img src="logo.png" alt="Brand Logo" class="logo">
-      <span class="brandname">ShopEase</span>
+      <img src="logoo.png" alt="Brand Logo" class="logo">
+      <span class="brandname">ShopSphere</span>
     </div>
     <div class="nav-icons">
       <i class="fas fa-shopping-cart"></i>
@@ -65,66 +65,66 @@
     </div>
     <div class="timer-box">
       <div class="timer">
-        <span id="days">00</span>
-        <span id="hours">00</span>
-        <span id="minutes">00</span>
-        <span id="seconds">60</span>
+        <span id="days">10</span>
+        <span id="hours">04</span>
+        <span id="minutes">60</span>
+        <span id="seconds">40</span>
       </div>
     </div>
   </section>
 
 
   <!-- Cards Section -->
-  <section class="bg-gray-100 h-60">
+  <section class="bg-gray-100 h-72">
   
   
-    <div class="flex gap-6 overflow-x-auto whitespace-nowrap scrollbar-hide mt-6 ml-4">
+    <div class="flex gap-6 overflow-x-auto whitespace-nowrap scrollbar-hide mt-8 ml-4">
       <!-- Card 1 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 1</h3>
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative transform hover:scale-105 transition-transform duration-300">
+        <img src="https://i.pinimg.com/236x/6b/51/15/6b51155414968088475d5baf16dabdf0.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+        <h3 class="font-semibold text-sm mb-1">Soccer Shoes</h3>
         <span class="bg-red-500 text-white text-xs font-bold py-1 px-2 rounded-md">20% OFF</span>
       </div>
   
       <!-- Card 2 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 2</h3>
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative transform hover:scale-105 transition-transform duration-300">
+        <img src="https://i.pinimg.com/736x/58/8e/96/588e96eaae0296bb213dd1aae50a0a3f.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+        <h3 class="font-semibold text-sm mb-1">Smart Phones</h3>
         <span class="bg-red-500 text-white text-xs font-bold py-1 px-2 rounded-md">15% OFF</span>
       </div>
   
       <!-- Card 3 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 3</h3>
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative transform hover:scale-105 transition-transform duration-300">
+        <img src="https://i.pinimg.com/736x/a5/46/c5/a546c5c47ee3ece0b6b489c1e8ee8058.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+        <h3 class="font-semibold text-sm mb-1">Women Jackets</h3>
         <span class="bg-red-500 text-white text-xs font-bold py-1 px-2 rounded-md">30% OFF</span>
       </div>
   
       <!-- Card 4 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 4</h3>
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative transform hover:scale-105 transition-transform duration-300">
+        <img src="https://i.pinimg.com/736x/7e/e6/f2/7ee6f2f8178e854e3208be572872e80f.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+        <h3 class="font-semibold text-sm mb-1">Gents Jackets</h3>
         <span class="bg-red-500 text-white text-xs font-bold py-1 px-2 rounded-md">10% OFF</span>
       </div>
   
       <!-- Card 5 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 5</h3>
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative transform hover:scale-105 transition-transform duration-300">
+        <img src="https://i.pinimg.com/236x/f3/e0/a5/f3e0a5dbb1ab2ad9a7332b4d572ecca7.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+        <h3 class="font-semibold text-sm mb-1">Crockery</h3>
         <span class="bg-red-500 text-white text-xs font-bold py-1 px-2 rounded-md">25% OFF</span>
       </div>
   
       <!-- Card 6 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 6</h3>
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative transform hover:scale-105 transition-transform duration-300">
+        <img src="https://i.pinimg.com/736x/61/4e/3c/614e3c99694894e5881dda883e894671.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+        <h3 class="font-semibold text-sm mb-1">Laptops</h3>
         <span class="bg-red-500 text-white text-xs font-bold py-1 px-2 rounded-md">18% OFF</span>
       </div>
   
       <!-- Card 7 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 7</h3>
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 relative transform hover:scale-105 transition-transform duration-300">
+        <img src="https://i.pinimg.com/736x/35/68/8c/35688c0fdf68e22b66c023f0f7c99203.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+        <h3 class="font-semibold text-sm mb-1">Furniture</h3>
         <span class="bg-red-500 text-white text-xs font-bold py-1 px-2 rounded-md">50% OFF</span>
       </div>
     </div>
@@ -136,54 +136,55 @@
     <h2 class="text-2xl font-bold mt-10 ml-4">You May Also Like</h2>
 
     <div class="flex gap-6 overflow-x-auto whitespace-nowrap scrollbar-hide mt-8 ml-4">
-      <!-- Card 1 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 1</h3>
-        <p class="text-green-500 font-bold">$19.99</p>
-      </div>
+     <!-- Card 1 -->
+<div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
+  <img src="https://i.pinimg.com/736x/51/94/1e/51941ee0831e24f4a4505147d69370c6.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+  <h3 class="font-semibold text-sm mb-1">Alovera Plant</h3>
+  <p class="text-green-500 font-bold">$19.99</p>
+</div>
 
-      <!-- Card 2 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 2</h3>
-        <p class="text-green-500 font-bold">$24.99</p>
-      </div>
+<!-- Card 2 -->
+<div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
+  <img src="https://i.pinimg.com/736x/21/76/64/2176648e367140657c225a260368a28c.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+  <h3 class="font-semibold text-sm mb-1">Cricket Kit</h3>
+  <p class="text-green-500 font-bold">$24.99</p>
+</div>
 
-      <!-- Card 3 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 3</h3>
-        <p class="text-green-500 font-bold">$29.99</p>
-      </div>
+<!-- Card 3 -->
+<div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
+  <img src="https://i.pinimg.com/736x/bf/bc/91/bfbc913b10601b6ad8014214d8652722.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+  <h3 class="font-semibold text-sm mb-1">Wardrobe</h3>
+  <p class="text-green-500 font-bold">$50.99</p>
+</div>
 
-      <!-- Card 4 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 4</h3>
-        <p class="text-green-500 font-bold">$14.99</p>
-      </div>
+<!-- Card 4 -->
+<div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
+  <img src="https://i.pinimg.com/736x/82/d5/94/82d5941cab90ac4a0a44d8b5e99cc95d.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+  <h3 class="font-semibold text-sm mb-1">Kids Bike</h3>
+  <p class="text-green-500 font-bold">$14.99</p>
+</div>
 
-      <!-- Card 5 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 5</h3>
-        <p class="text-green-500 font-bold">$34.99</p>
-      </div>
+<!-- Card 5 -->
+<div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
+  <img src="https://i.pinimg.com/736x/0c/e8/29/0ce8299f7b1c845d575f949b244ea238.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+  <h3 class="font-semibold text-sm mb-1">Gold Watch</h3>
+  <p class="text-green-500 font-bold">$34.99</p>
+</div>
 
-       <!-- Card 6 -->
-       <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 5</h3>
-        <p class="text-green-500 font-bold">$34.99</p>
-      </div>
+<!-- Card 6 -->
+<div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
+  <img src="https://i.pinimg.com/736x/9f/32/89/9f328989218e32c0d33fc901fd9e296d.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+  <h3 class="font-semibold text-sm mb-1">Gents Coat</h3>
+  <p class="text-green-500 font-bold">$24.99</p>
+</div>
 
-       <!-- Card 7 -->
-       <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
-        <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
-        <h3 class="font-semibold text-sm mb-1">Product Title 5</h3>
-        <p class="text-green-500 font-bold">$34.99</p>
-      </div>
+<!-- Card 7 -->
+<div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
+  <img src="https://i.pinimg.com/736x/dc/ed/95/dced95bee9ad80b366184dad205bd397.jpg" alt="Product Image" class="w-full h-40 object-cover rounded-md mb-2">
+  <h3 class="font-semibold text-sm mb-1">Ladies Kurti</h3>
+  <p class="text-green-500 font-bold">$20.99</p>
+</div>
+
     </div>
     </div>
    
@@ -200,53 +201,53 @@
   
   <!-- Consumer Electronics -->
   <section class="bg-gray-100 h-96">
-    <h2 class="text-2xl font-bold mt-10 ml-4">You May Also Like</h2>
+    <h2 class="text-2xl font-bold mt-10 ml-4">Consumer Electronics</h2>
 
     <div class="flex gap-6 overflow-x-auto whitespace-nowrap scrollbar-hide mt-8 ml-4">
       <!-- Card 1 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
         <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
         <h3 class="font-semibold text-sm mb-1">Product Title 1</h3>
         <p class="text-green-500 font-bold">$19.99</p>
       </div>
 
       <!-- Card 2 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
         <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
         <h3 class="font-semibold text-sm mb-1">Product Title 2</h3>
         <p class="text-green-500 font-bold">$24.99</p>
       </div>
 
       <!-- Card 3 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
         <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
         <h3 class="font-semibold text-sm mb-1">Product Title 3</h3>
         <p class="text-green-500 font-bold">$29.99</p>
       </div>
 
       <!-- Card 4 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
         <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
         <h3 class="font-semibold text-sm mb-1">Product Title 4</h3>
         <p class="text-green-500 font-bold">$14.99</p>
       </div>
 
       <!-- Card 5 -->
-      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
+      <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
         <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
         <h3 class="font-semibold text-sm mb-1">Product Title 5</h3>
         <p class="text-green-500 font-bold">$34.99</p>
       </div>
 
        <!-- Card 6 -->
-       <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
+       <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
         <img src="https://via.placeholder.com/150" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
         <h3 class="font-semibold text-sm mb-1">Product Title 5</h3>
         <p class="text-green-500 font-bold">$34.99</p>
       </div>
 
        <!-- Card 7 -->
-       <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0">
+       <div class="w-48 bg-white p-4 rounded-lg shadow-md shrink-0 transform hover:scale-105 transition-transform duration-300">
         <img src="https://cdn.pixabay.com/photo/2022/08/29/15/11/clock-7419071_640.jpg" alt="Product Image" class="w-full h-32 object-cover rounded-md mb-2">
         <h3 class="font-semibold text-sm mb-1">Product Title 5</h3>
         <p class="text-green-500 font-bold">$34.99</p>
@@ -276,42 +277,42 @@
   <!-- Grid layout with responsive columns -->
   <div class="grid grid-cols-2 gap-6 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-2 xl:grid-cols-2">
     <!-- Card 1 -->
-    <div class="bg-white p-4 rounded-lg shadow-md">
+    <div class="bg-white p-4 rounded-lg shadow-md transform hover:scale-105 transition-transform duration-300">
       <img src="https://via.placeholder.com/300x200" alt="Product Image" class="w-full h-48 sm:h-56 md:h-96 object-cover rounded-md mb-4">
       <h3 class="font-semibold text-base mb-2">Product Title 1</h3>
       <p class="text-green-500 font-bold text-lg">$19.99</p>
     </div>
 
     <!-- Card 2 -->
-    <div class="bg-white p-4 rounded-lg shadow-md">
+    <div class="bg-white p-4 rounded-lg shadow-md transform hover:scale-105 transition-transform duration-300">
       <img src="https://via.placeholder.com/300x200" alt="Product Image" class="w-full h-48 sm:h-56 md:h-96 object-cover rounded-md mb-4">
       <h3 class="font-semibold text-base mb-2">Product Title 2</h3>
       <p class="text-green-500 font-bold text-lg">$24.99</p>
     </div>
 
     <!-- Card 3 -->
-    <div class="bg-white p-4 rounded-lg shadow-md">
+    <div class="bg-white p-4 rounded-lg shadow-md transform hover:scale-105 transition-transform duration-300">
       <img src="https://via.placeholder.com/300x200" alt="Product Image" class="w-full h-48 sm:h-56 md:h-96 object-cover rounded-md mb-4">
       <h3 class="font-semibold text-base mb-2">Product Title 3</h3>
       <p class="text-green-500 font-bold text-lg">$29.99</p>
     </div>
 
     <!-- Card 4 -->
-    <div class="bg-white p-4 rounded-lg shadow-md">
+    <div class="bg-white p-4 rounded-lg shadow-md transform hover:scale-105 transition-transform duration-300">
       <img src="https://via.placeholder.com/300x200" alt="Product Image" class="w-full h-48 sm:h-56 md:h-96 object-cover rounded-md mb-4">
       <h3 class="font-semibold text-base mb-2">Product Title 4</h3>
       <p class="text-green-500 font-bold text-lg">$14.99</p>
     </div>
 
     <!-- Card 5 -->
-    <div class="bg-white p-4 rounded-lg shadow-md">
+    <div class="bg-white p-4 rounded-lg shadow-md transform hover:scale-105 transition-transform duration-300">
       <img src="https://via.placeholder.com/300x200" alt="Product Image" class="w-full h-48 sm:h-56 md:h-96 object-cover rounded-md mb-4">
       <h3 class="font-semibold text-base mb-2">Product Title 5</h3>
       <p class="text-green-500 font-bold text-lg">$34.99</p>
     </div>
 
     <!-- Card 6 -->
-    <div class="bg-white p-4 rounded-lg shadow-md">
+    <div class="bg-white p-4 rounded-lg shadow-md transform hover:scale-105 transition-transform duration-300">
       <img src="https://via.placeholder.com/300x200" alt="Product Image" class="w-full h-48 sm:h-56 md:h-96 object-cover rounded-md mb-4">
       <h3 class="font-semibold text-base mb-2">Product Title 6</h3>
       <p class="text-green-500 font-bold text-lg">$18.99</p>
@@ -324,8 +325,8 @@
     <div class="flex flex-col md:flex-row justify-between items-center space-y-6 md:space-y-0">
       <!-- Brand Name and Logo -->
       <div class="flex items-center space-x-4">
-        <img src="https://via.placeholder.com/50" alt="Brand Logo" class="w-16 h-16 object-cover rounded-full shadow-lg">
-        <span class="text-4xl font-bold text-white tracking-wide">Brand Name</span>
+        <img src="logoo.png" alt="Brand Logo" class="w-16 h-16 object-cover rounded-full shadow-lg">
+        <span class="text-4xl font-bold text-white tracking-wide">ShopSphere</span>
       </div>
 
       <!-- Links Section -->
@@ -348,7 +349,7 @@
 
     <!-- Rights Reserved Section -->
     <div class="mt-8 text-center text-sm text-gray-300">
-      <p>&copy; 2024 <span class="font-bold">Brand Name</span>. All rights reserved.</p>
+      <p>&copy; 2024 <span class="font-bold">Muhammad Ahmed</span>. All rights reserved.</p>
     </div>
   </div>
 </footer>
